--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -45,6 +45,7 @@ jobs:
             - uses: codecov/codecov-action@v1
               with:
                   file: lcov.info
+                  token: ${{ secrets.CODECOV_TOKEN }}
     docs:
         name: Documentation
         runs-on: ubuntu-latest
